  to force case sensitivity in other languages
- Fixed a number of type parsing problems in C
- Added a new preprocessor (mcpp) for C
- Report an error if ORGH tries to go backwards
- Added support for more kinds of operands in inline assembly
- Added -D__FLEXSPIN__, -D__FLEXBASIC__, and -D__FLEXC__ defines for
  future compatibility (someday this tool will be renamed).

Version 3.9.10
- Added a peephole optimizer to replace "mov x, #0 ; add x, y" with
  "mov x, y"
- Added sqrt() operator to BASIC
- Fixed a problem with passing (some) floating point parameters to functions
- Fixed another REP bug in the P2 optimizer
- Fixed cognew/coginit return value when no free cog is available
- Fixed another CSE bug
- Fixed a floating point display bug (E notation was off by one)
- #ifdef/#endif around #include was broken, fixed now
- Many improvements to the C frontend

Version 3.9.9
- Use P2 encod instruction for >| operator
- Allow x.y expressions to reference constants in an object
- Removed WORD from BASIC types
- Fixed a bug in converting DJNZ to REP in P2 code
- Fixed unsigned divide and remainder in BASIC and C

Version 3.9.8
- Added __propeller__ symbol to preprocessor
- Added SELECT CASE to BASIC
- Fixed a nasty buffer overflow in integer prints
- Fixed close #n (it was losing the object pointer)
- Fixed an optimizer bug in replacing registers
- Fixed an assembly output bug when the input contains only leaf
  functions
- Made for loops with float variables work
- Fixed missing _rx function for P2

Version 3.9.7
- Fixed a bug in converting float values to integer
- Fixed a bug in handling local arrays
- Fixed an error in determining types of memory references
- Used builtin functions to push/pop collections of variables (reduces
  HUB size)
- Added syntax for initializing arrays in BASIC
- Fixed some Mac build issues (thanks to David Betz)

Version 3.9.6
- Re-use the same set of registers for all functions in LMM mode,